Progress on blog post

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,6 +1,7 @@
 ---
 import { CollectionEntry, getCollection } from "astro:content";
 import BlogPost from "../../layouts/BlogPost.astro";
+import Aside from "../../components/Aside.astro";
 
 const posts = await getCollection("blog");
 type Props = CollectionEntry<"blog">;
@@ -12,5 +13,5 @@ const { Content } = await post.render();
 ---
 
 <BlogPost {...post.data}>
-  <Content />
+  <Content components={{ Aside: Aside }} />
 </BlogPost>
