--- a/src/components/Mark.astro
+++ b/src/components/Mark.astro
@@ -1,34 +1,38 @@
 <div class="bg-white">
   <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
     <div
-      class="bg-indigo-500 rounded-lg shadow-xl overflow-hidden lg:grid lg:grid-cols-2 lg:gap-4"
+      class="bg-indigo-100 rounded-lg shadow-xl overflow-hidden lg:grid lg:grid-cols-2 lg:gap-4"
     >
       <div
         class="pt-10 pb-12 px-6 sm:pt-16 sm:px-16 lg:py-16 lg:pr-0 xl:py-20 xl:px-20"
       >
         <div class="lg:self-center">
-          <h2 class="text-3xl font-extrabold text-white sm:text-4xl">
+          <h2 class="text-3xl font-extrabold text-indigo-800 sm:text-4xl">
             <span class="block">Kopje koffie?</span>
           </h2>
-          <p class="mt-4 text-lg leading-6 text-indigo-200">
+          <p class="mt-4 text-lg leading-6 text-indigo-600">
             How could I help with your business? Let's have a coffee in real
             life or online!
           </p>
 
           <a
             href="mailto:mark@vectos.net"
-            class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50"
+            class="mt-8 bg-indigo-800 border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-white hover:bg-indigo-700"
             >Contact Mark</a
           >
           <a
             href="/about"
-            class="mt-8 border border-transparent underline px-5 py-3 inline-flex items-center text-base font-medium text-gray-200 hover:bg-white-50"
+            class="mt-8 border border-transparent underline px-5 py-3 inline-flex items-center text-base font-medium text-gray-700 hover:text-gray-900"
             >About Mark</a
           >
         </div>
       </div>
       <div class="mt-6 mb-6 mr-6">
-        <img class="h-128 w-128 rounded-lg" src="/img/mark.jpg" alt="Mark" />
+        <img
+          class="h-128 w-128 rounded-lg"
+          src="/img/mark-coffee.jpg"
+          alt="Mark"
+        />
       </div>
     </div>
   </div>
