--- a/src/components/TechMarque.astro
+++ b/src/components/TechMarque.astro
@@ -21,7 +21,7 @@ const { tech } = Astro.props;
       </div>
       <marquee>
         <div class="flex items-center whitespace-nowrap">
-          <TechItems tech={tech}></TechItems>
+          <TechItems tech={tech} />
         </div>
       </marquee>
     </div>
