--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -16,7 +16,7 @@ const { title, description, pubDate, banner } = Astro.props;
   <Shell>
     <div class="relative bg-gray-50 overflow-hidden">
       <div class="mt-8 mb-8 relative px-4 sm:px-6 lg:px-8">
-        <div class="text-lg max-w-prose mx-auto">
+        <div class="text-lg max-w-4xl mx-auto">
           <h1>
             <span
               class="block text-base text-center text-indigo-600 font-semibold tracking-wide uppercase"
@@ -31,7 +31,7 @@ const { title, description, pubDate, banner } = Astro.props;
             </p>
           </h1>
           <div
-            class="mt-6 prose prose-stone prose-indigo prose-base text-gray-500 mx-auto"
+            class="mt-6 prose prose-stone prose-indigo prose-lg text-gray-500 mx-auto max-w-none"
           >
             <slot />
           </div>
