--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -2,6 +2,7 @@
 import { CollectionEntry, getCollection } from "astro:content";
 import BlogPost from "../../layouts/BlogPost.astro";
 import Aside from "../../components/Aside.astro";
+import ServiceLink from "../../components/ServiceLink.astro";
 
 const posts = await getCollection("blog");
 type Props = CollectionEntry<"blog">;
@@ -13,5 +14,5 @@ const { Content } = await post.render();
 ---
 
 <BlogPost {...post.data} slug={post.slug}>
-  <Content components={{ Aside: Aside }} />
+  <Content components={{ Aside: Aside, ServiceLink: ServiceLink }} />
 </BlogPost>
