Add YT component

--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -3,6 +3,7 @@ import { CollectionEntry, getCollection } from "astro:content";
 import BlogPost from "../../layouts/BlogPost.astro";
 import Aside from "../../components/Aside.astro";
 import ServiceLink from "../../components/ServiceLink.astro";
+import YouTubePlayer from "../../components/YouTubePlayer.astro";
 
 const posts = await getCollection("blog");
 type Props = CollectionEntry<"blog">;
@@ -14,5 +15,5 @@ const { Content } = await post.render();
 ---
 
 <BlogPost {...post.data} slug={post.slug}>
-  <Content components={{ Aside: Aside, ServiceLink: ServiceLink }} />
+  <Content components={{ Aside: Aside, ServiceLink: ServiceLink, YouTubePlayer: YouTubePlayer }} />
 </BlogPost>
